Fix Inventory heading alignment

--- a/react-app/src/components/Inventory/Inventory.module.css
+++ b/react-app/src/components/Inventory/Inventory.module.css
@@ -29,7 +29,7 @@
 }
 
 .date {
-    width: 163px;
+    width: 175px;
 }
 
 .line {
