--- a/react-app/src/components/Inventory/InventoryItem/InventoryItem.module.css
+++ b/react-app/src/components/Inventory/InventoryItem/InventoryItem.module.css
@@ -21,6 +21,10 @@
     height: 50px;
 }
 
+.time {
+    width: 175px;
+}
+
 .price {
     width: 50px;
 }
